# my-blocks

./: bun.lockb  package.json  tsconfig.node.json  vite.config.ts
src/: App.tsx  Block.tsx  BlockInput.tsx  BlockList.tsx  Page.tsx  index.css  main.tsx
src-tauri/: .config.toml  Cargo.toml  file.db  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/blocks/: block.rs  mod.rs
src-tauri/src/configuration/: mod.rs
src-tauri/src/storage/: mod.rs
src/components/: BlockDebugInformation.tsx
